XMLtoCSV/objects/unpackaged/objects/MC_Cycle_Plan_Product_vod__c.object
<CustomObject>
    <description>Defines a product that is associated to a Cycle Plan Channel.</description>
    <fields>
        <fullName>Activity_Goal_Edit_vod__c</fullName>
        <description>Edited number of product activities for the Channel and Target</description>
        <label>Activity Goal Edit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_vod__c</fullName>
        <description>Channel label from the Cycle Channel</description>
        <formula>Cycle_Plan_Channel_vod__r.Cycle_Channel_vod__r.Channel_Label_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Channel_vod__c</fullName>
        <description>Related Cycle Plan Channel record</description>
        <label>Cycle Plan Channel</label>
        <referenceTo>MC_Cycle_Plan_Channel_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Plan Products</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Products_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_vod__c</fullName>
        <formula>Cycle_Plan_Channel_vod__r.Cycle_Plan_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Product_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Cycle Product that this Cycle Plan Product is associated with. This defines how product activities are calculated</description>
        <label>Cycle Product</label>
        <referenceTo>MC_Cycle_Product_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Plan Products</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Products_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_Name_vod__c</fullName>
        <description>Detail Group label from the Cycle Product</description>
        <formula>Cycle_Product_vod__r.Detail_Group_vod__r.Name</formula>
        <label>Detail Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Priority_vod__c</fullName>
        <description>Suggested detail order the product should be detailed to the Target</description>
        <label>Detail Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Calculated_vod__c</fullName>
        <description>Date and time the Cycle Plan was last calculated.</description>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Activity_Goal_vod__c</fullName>
        <description>Suggested number of product activities for the Channel and Target</description>
        <label>Product Activity Goal</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Activity_Max_vod__c</fullName>
        <description>Maximum number of product activities allowed toward product attainment</description>
        <label>Product Activity Max</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Activity_Remaining_vod__c</fullName>
        <description>Goals - Actual. If no goals provided then remaining will be blank.</description>
        <label>Product Activity Remaining</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Actual_Activity_vod__c</fullName>
        <description>Count of actual product activities according to the Cycle Channel Criteria.</description>
        <label>Product Activity Actual</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Attainment_vod__c</fullName>
        <description>Product Interactions Earned / Product Interactions Goal. If no goals then attainment is blank.</description>
        <label>Product Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Actual_vod__c</fullName>
        <description>Product Actual Activity x Product Activity Weight</description>
        <label>Product Interactions Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Earned_vod__c</fullName>
        <description>If Channel Activity Actual is greater than Channel Activity Max this value will be Channel Activity Max, otherwise Channel Activity Actual.</description>
        <label>Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Goal_vod__c</fullName>
        <description>Product Activity Goal x Product Weight. If no goals then value is blank.</description>
        <label>Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_vod__c</fullName>
        <description>Product label from the Cycle Product</description>
        <formula>Cycle_Product_vod__r.Product_vod__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan Product&apos;s Product Attainment and the % Cycle Completed.</description>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Activity_Goal_Edit_vod__c</fullName>
        <description>Edited number of team product activities for the Channel and Target</description>
        <label>Team Activity Goal Edit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Activity_Goal_vod__c</fullName>
        <description>Suggested number of team product activities for the Channel and Target</description>
        <label>Team Product Activity Goal</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Activity_Max_vod__c</fullName>
        <description>Maximum number of team product activities allowed toward team product attainment</description>
        <label>Team Product Activity Max</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Activity_Remaining_vod__c</fullName>
        <description>Team Product Activity Goal minus Team Product Activity Actual, if no goals provided then remaining will be blank</description>
        <label>Team Product Activity Remaining</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Actual_Activity_vod__c</fullName>
        <description>Count of actual team product activities according to the Cycle Channel Criteria</description>
        <label>Team Product Activity Actual</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Attainment_vod__c</fullName>
        <description>Team Product Interactions Earned / Team Product Interactions Goal. If no goals, then attainment is blank.</description>
        <label>Team Product Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Actual_vod__c</fullName>
        <description>Team Product Actual Activity * Cycle Product Weight</description>
        <label>Team Product Interactions Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Earned_vod__c</fullName>
        <description>If Team Product Activity Actual is greater than Team Product Activity Max, then this value will be the Team Product Activity Max, else Team Product Activity Actual.</description>
        <label>Team Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Goal_vod__c</fullName>
        <description>Team Product Activity Goal * Cycle Product Weight. If no goals, then value is blank.</description>
        <label>Team Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Status_vod__c</fullName>
        <description>Comparing the Team Product Attainment and the % Cycle Completed.</description>
        <label>Team Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>System set to prevent duplicate Products for a Cycle Plan Channel. Cycle_Plan_Channel_vod__c.Id +__+ Cycle_Product_vod__c.Id</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MC Cycle Plan Product</label>
    <nameField>
        <displayFormat>CPP-{0000}</displayFormat>
        <label>Cycle Plan Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Cycle Plan Products</pluralLabel>
    <recordTypes>
        <fullName>Product_vod</fullName>
        <active>true</active>
        <label>Product_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Goal_Validations_vod</fullName>
        <active>true</active>
        <description>Product_Activity_Goal_vod cannot be less than 0</description>
        <errorConditionFormula>Product_Activity_Goal_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Product_Activity_Goal_vod__c</errorDisplayField>
        <errorMessage>Channel Activity Goal cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Validations_vod</fullName>
        <active>true</active>
        <description>Product_Activity_Max_vod cannot be less than 0 or less than Product_Activity_Goal_vod</description>
        <errorConditionFormula>OR(
Product_Activity_Max_vod__c &lt; 0,
Product_Activity_Max_vod__c &lt; Product_Activity_Goal_vod__c
)</errorConditionFormula>
        <errorDisplayField>Product_Activity_Max_vod__c</errorDisplayField>
        <errorMessage>Product Activity Max cannot be less than 0 or less than Product Activity Goal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Goal_Validations_vod</fullName>
        <active>true</active>
        <description>Team_Product_Activity_Goal_vod cannot be less than 0</description>
        <errorConditionFormula>Team_Product_Activity_Goal_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Team_Product_Activity_Goal_vod__c</errorDisplayField>
        <errorMessage>Team Product Activity Goal cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Max_Validations_vod</fullName>
        <active>true</active>
        <description>Team_Product_Activity_Max_vod cannot be less than 0 or less than Team_Product_Activity_Goal_vod</description>
        <errorConditionFormula>OR(
Team_Product_Activity_Max_vod__c &lt; 0,
Team_Product_Activity_Max_vod__c &lt;Team_Product_Activity_Goal_vod__c
)</errorConditionFormula>
        <errorDisplayField>Team_Product_Activity_Max_vod__c</errorDisplayField>
        <errorMessage>Team Product Activity Max cannot be less than 0 or less than Team Product Activity Goal.</errorMessage>
    </validationRules>
</CustomObject>